--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,260 @@
 *{
-    margin: 0;
-    padding: 0;
-}
-/* menu cha */
-nav{
-    background: #fff; 
-    text-align: center;
-    display: inline-block;
+    margin:0;
+    padding:0;
     font-family: sans-serif;
-    width: 1440px;
-    height: 80px;
-    margin-right: 144px;
-    margin-left: 127px;
 }
-nav ul{
+html, body{
+    height: 100%;
+}
+.container {
+    width: 100%;
+    margin-right: 9%;
+    margin-left: 9%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+.menu {
+    width: 100%;
     display: flex;
+    align-items: center;
 }
-nav> ul li{
-    list-style: none; 
+.header__logo{
+    width: 80px;
+    cursor: pointer;
+    margin: 0px 0;
 }
-nav> ul li a{
-    display: block;
-    padding-left: 30px;
-    padding-right: 30px;
+.header__menu--icon{
+    width: 20px;
+    cursor: pointer;
+    display: none;
+}
+nav{
+    flex: 1;
+    text-align: right;
+}
+.menu__item{
+    list-style: none;
+    display: inline-block;
+    margin-right: 30px;
     line-height: 80px;
     color: #2e57b7;
+    gap: 0 60px;
+    
+}
+.menu__item--link{
     text-decoration: none;
-    box-shadow: 0 3px #fff;
+    font-family: "Roboto", sans-serif;
+    line-height: 80px;
+}
+.menu__item :hover{
+    background: #90afe4;
+    opacity: 100%;
+    line-height: 80px;
+    color: #081843;
+    box-shadow: 0 3px #2e57b7;
     transition: box-shadow 0.3s;
 
 }
-
-nav ul li:hover>a{
-    background: #90afe4;
-    opacity: 100%;
-    color: #081843;
-    box-shadow: 0 3px #2e57b7;
-}
-#logo{
-    padding-right: 255px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
-
-/*menu con*/
-nav li ul{
+.submenu{
     display: none;
-    min-width: 200px;
+    min-width: 150px;
     position: absolute;
+    list-style-type: none;
 }
-nav li>ul li{
-    width: 100%;
+.submenu__item {
+    width: 150px;
     border: none;
     border-bottom: 0px solid #fff;
     background: #fff;
-    text-align: left;
+    text-align: center;
 }
-nav  li:hover > ul{
-    display:  block;
+.submenu__item--link {
+    font-family: "Noto Sans JP", sans-serif;
+    color: #081843;
+    text-decoration: none;
+
+}
+.submenu-item:hover {
+    background: #fff;
 }
 
+.menu__item:hover > .submenu {
+    display: block;
+}
+
+.menu__language {
+    margin-right: 144px;
+    display: flex;
+    align-items: center;
+    font-family: "Noto Sans JP", sans-serif;
+    padding: 0 32px;
+  }
+  
+.menu__language--line {
+    border-left: solid 1px #c3c3c3;
+    height: 30px;
+    position: absolute;
+    left: -4px;
+    top: -4px;
+}
+  
+.menu__language--link {
+    margin-left: 5px;
+    font-size: 14px;
+    color: #081843;
+    text-decoration: none;
+    
+}
+
+/* banner */
+.banner {
+    background-image: url(../img/banner.png);
+    width: 100%;
+    height: 100%;
+    
+}
+  
+.banner__content {
+    position: absolute;
+    max-width: 624px;
+    height: 284px;
+    background-color: rgba(47, 101, 194, 0.7);
+    top: 40%;
+    left: 47%;
+    padding: 38px 0 28px 28px;
+}
+  
+.banner__content--heading {
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 36px;
+    margin-bottom: 26px;
+    line-height: 150%;
+}
+  
+.banner__content--text {
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 150%;
+    font-weight: 400;
+    margin-bottom: 46px;
+}
+  
+.btn {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    text-decoration: none;
+    line-height: 150%;
+    color: #2e57b7;
+    background-color: #ffffff;
+    border-radius: 3px;
+    padding: 13px 43px;
+    margin-bottom: 35px;
+    transition: 0.3s;
+
+}
+  
+.btn:hover {
+    color: #ffffff;
+    background-color: #2e57b7;
+}
+
+@media only screen and (max-width:700px)
+{
+    nav ul {
+        width: 100%;
+        background: #fff;
+        position: absolute;
+
+    }
+    .menu{
+        align-items: center;
+    }
+    .menu__item{
+        display :block;
+        margin-top: 10px;
+        margin-bottom: 10px; 
+    }
+    .menu__item--link{
+        color: #2e57b7;
+    }
+    .header__logo{
+        display: flex;
+        justify-content: center;
+        
+    }
+    .header__menu--icon{
+        display: block;
+    }
+    
+    .menu__language {
+        margin-right: 37px;
+        margin-top: 15px;
+        margin-bottom: 35px;
+      }
+      
+    .menu__language--line {
+        display: none;
+    }
+      
+    .menu__language--link {
+        color: #081843;
+        text-decoration: none;
+        display: none;
+        
+    }
+    #menuList{
+        display: none;
+        overflow: hidden;
+        transition: 0.5s;
+    }
+    .banner {
+        background-image: url(../img/BannerMB.png);
+        width: 100%;
+        height: 100%;    
+    }
+
+    .banner__content{
+        max-width: 100%;
+        height: 50%%;
+        background-color: rgba(47, 101, 194, 0.7);
+        top: 20%%;
+        bottom: 20%;
+        left: 0%;
+    }
+
+    .banner__content--heading {
+        color: #ffffff;
+        font-weight: 700;
+        font-size: 36px;
+        text-align: center;
+        line-height: 48px;
+    }
+      
+    .banner__content--text {
+        color: #ffffff;
+        font-size: 16px;
+        text-align: center;
+        line-height: 150%;
+        font-weight: 400;
+        margin-bottom: 46px;
+    }
+    .btn {
+        font-family: "Roboto", sans-serif;
+        font-size: 16px;
+        font-weight: 600;
+        text-decoration: none;
+        line-height: 150%;
+        color: #2e57b7;
+        background-color: #ffffff;
+        width: 170px;
+        border-radius: 3px;
+        transition: 0.3s;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    
+    }
+}
