--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,260 +1,641 @@
 *{
-    margin:0;
-    padding:0;
-    font-family: sans-serif;
+  margin:0;
+  padding:0;
+  font-family: sans-serif;
 }
 html, body{
-    height: 100%;
+  height: 100%;
 }
 .container {
-    width: 100%;
-    margin-right: 9%;
-    margin-left: 9%;
-    box-sizing: border-box;
-    overflow: hidden;
+  width: 100%;
+  margin-right: 0%;
+  margin-left: 0%;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 .menu {
-    width: 100%;
-    display: flex;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 .header__logo{
-    width: 80px;
-    cursor: pointer;
-    margin: 0px 0;
+  width: 80px;
+  cursor: pointer;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 .header__menu--icon{
-    width: 20px;
-    cursor: pointer;
-    display: none;
+  width: 20px;
+  cursor: pointer;
+  display: flex;
+  margin-left: 5px;
 }
 nav{
-    flex: 1;
-    text-align: right;
+  flex: 1;
+  text-align: right;
 }
 .menu__item{
-    list-style: none;
-    display: inline-block;
-    margin-right: 30px;
-    line-height: 80px;
-    color: #2e57b7;
-    gap: 0 60px;
-    
+  list-style: none;
+  display: inline-block;
+  margin-right: 30px;
+  line-height: 80px;
+  color: #2e57b7;
+  gap: 0 60px;
+  
 }
 .menu__item--link{
-    text-decoration: none;
-    font-family: "Roboto", sans-serif;
-    line-height: 80px;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  line-height: 80px;
 }
 .menu__item :hover{
-    background: #90afe4;
-    opacity: 100%;
-    line-height: 80px;
-    color: #081843;
-    box-shadow: 0 3px #2e57b7;
-    transition: box-shadow 0.3s;
+  background: #90afe4;
+  opacity: 100%;
+  line-height: 80px;
+  color: #081843;
+  box-shadow: 0 3px #2e57b7;
+  transition: box-shadow 0.3s;
 
 }
+
 .submenu{
-    display: none;
-    min-width: 150px;
-    position: absolute;
-    list-style-type: none;
+  display: none;
+  min-width: 150px;
+  position: absolute;
+  list-style-type: none;
 }
 .submenu__item {
-    width: 150px;
-    border: none;
-    border-bottom: 0px solid #fff;
-    background: #fff;
-    text-align: center;
+  width: 150px;
+  border: none;
+  border-bottom: 0px solid #fff;
+  background: #fff;
+  text-align: center;
 }
 .submenu__item--link {
-    font-family: "Noto Sans JP", sans-serif;
-    color: #081843;
-    text-decoration: none;
+  font-family: "Noto Sans JP", sans-serif;
+  color: #081843;
+  text-decoration: none;
 
 }
 .submenu-item:hover {
-    background: #fff;
+  background: #fff;
 }
 
 .menu__item:hover > .submenu {
-    display: block;
+  display: block;
 }
 
 .menu__language {
-    margin-right: 144px;
-    display: flex;
-    align-items: center;
-    font-family: "Noto Sans JP", sans-serif;
-    padding: 0 32px;
-  }
-  
-.menu__language--line {
-    border-left: solid 1px #c3c3c3;
-    height: 30px;
-    position: absolute;
-    left: -4px;
-    top: -4px;
-}
-  
-.menu__language--link {
-    margin-left: 5px;
-    font-size: 14px;
-    color: #081843;
-    text-decoration: none;
-    
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
+  font-family: "Noto Sans JP", sans-serif;
+  padding: 0 32px;
 }
 
-/* banner */
-.banner {
-    background-image: url(../img/banner.png);
+.menu__language--line {
+  border-left: solid 1px #c3c3c3;
+  height: 30px;
+  position: absolute;
+  left: -4px;
+  top: -4px;
+}
+
+.menu__language--link {
+  margin-left: 5px;
+  font-size: 14px;
+  color: #081843;
+  text-decoration: none;
+  
+}
+#menuList{
+  display: none;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+#banner {
+    position: relative;
+    overflow: hidden;
+    padding: 85px 0;
+    margin-top: -8px;
+  }
+  
+  #banner .banner-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 100%;
-    
-}
+    display: block;
+  }
   
-.banner__content {
-    position: absolute;
-    max-width: 624px;
-    height: 284px;
-    background-color: rgba(47, 101, 194, 0.7);
-    top: 40%;
-    left: 47%;
-    padding: 38px 0 28px 28px;
-}
+  #banner .container-xxl {
+    position: relative;
+    z-index: 1;
+    padding: 0 -12px !important;
+  }
   
-.banner__content--heading {
+  @media (min-width: 576px) {
+    #banner .container-xxl {
+      text-align: right;
+    }
+  }
+  
+  #banner .banner-content {
+    display: inline-block;
+    background: rgba(47, 101, 194, 0.7);
+    text-align: center;
+    padding: 35px;
+    color: #ffffff;
+  }
+  
+  #banner .banner-content .banner-heading {
     color: #ffffff;
     font-weight: 700;
     font-size: 36px;
     margin-bottom: 26px;
     line-height: 150%;
-}
+  }
   
-.banner__content--text {
+  #banner .banner-content .banner-text {
     color: #ffffff;
     font-size: 16px;
     line-height: 150%;
     font-weight: 400;
     margin-bottom: 46px;
-}
+    display: block;
+  }
   
-.btn {
-    font-family: "Roboto", sans-serif;
+  @media (min-width: 576px) {
+    #banner .banner-content {
+      text-align: left;
+    }
+  }
+  
+  
+  /*  About */
+  .about {
+    background: #f6fafe;
+    padding-top: 90px;
+    padding-bottom: 74px;
+  }
+  
+  @media (max-width: 576px) {
+    .about {
+      padding-top: 36px;
+      padding-bottom: 36px;
+    }
+  }
+  
+  @media (max-width: 992px) {
+    .about {
+      padding-top: 0;
+    }
+  }
+  
+  @media (max-width: 992px) {
+    .about .row {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: reverse;
+          -ms-flex-direction: column-reverse;
+              flex-direction: column-reverse;
+    }
+  }
+  
+  .about-heading {
+    font-weight: 700;
+    color: #2f65c2;
+    font-size: 36px;
+    line-height: 200%;
+  }
+  
+  @media (max-width: 992px) {
+    .about-heading {
+      text-align: center;
+    }
+  }
+  
+  .about-subheading {
+    font-weight: 600;
+    font-family: "Montserrat", sans-serif;
+    line-height: 175%;
+    font-size: 16px;
+    color: #081843;
+    margin-top: 15px;
+    letter-spacing: -0.015em;
+  }
+  
+  .about-list {
+    padding-left: 0;
+  }
+  
+  .about-list > li {
+    list-style: none;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    line-height: 162%;
+    letter-spacing: -0.015em;
+    font-weight: 400;
+    color: #464646;
+  }
+  
+  /* Our service */
+  
+  .services {
+    padding-top: 45px;
+    padding-bottom: 102px;
+  }
+  
+  @media (max-width: 992px) {
+    .services {
+      padding-top: 36px;
+      padding-bottom: 36px;
+    }
+  }
+  
+  .services .service-heading-main {
+    font-weight: 700;
+    color: #2f65c2;
+    font-size: 36px;
+    line-height: 200%;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  
+  .services .service-subheading {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    line-height: 175%;
+    color: #081843;
+    letter-spacing: -0.015em;
+    margin-bottom: 30px;
+  }
+  
+  .services .service {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 20px 20px;
+    list-style: none;
+    padding-left: 0;
+  }
+  
+  .services .service-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 0 10px;
+    width: 100%;
+    height: 60px;
+    padding: 17px 0px 17px 17px;
+    -webkit-box-shadow: 0px 4px 4px 0px #00000040;
+            box-shadow: 0px 4px 4px 0px #00000040;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  
+  .services .service-item-text {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: #ffffff;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 162%;
+    letter-spacing: -0.015em;
+    align-items: center;
+  }
+  
+  .services .service-left > li {
+    background-color: #2f65c2;
+  }
+  
+  .services .service-right > li {
+    background-color: #de4141;
+  }
+  
+  .chooses {
+    background-color: #f6fafe;
+  }
+  
+  .chooses .choose-content {
+    padding-top: 102px;
+    padding-bottom: 102px;
+  }
+  
+  .chooses .choose-content .choose-heading {
+    color: #2f65c2;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 200%;
+    letter-spacing: -0.015em;
+    margin-bottom: 15px;
+  }
+  
+  @media (max-width: 1200px) {
+    .chooses .choose-content .choose-heading {
+      text-align: center;
+    }
+  }
+  
+  .chooses .choose-content .choose-subheading {
+    color: #081843;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    line-height: 150%;
+    margin-bottom: 15px;
+  }
+  
+  .chooses .choose-content .reason {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-left: -24px;
+  }
+  
+  @media (max-width: 567px) {
+    .chooses .choose-content .reason {
+      margin-left: 0;
+    }
+  }
+  
+  @media (max-width: 567px) {
+    .chooses .choose-content .reason:last-child {
+      margin-bottom: 36px;
+    }
+  }
+  /* Our client */
+  .clients {
+    padding: 78px 0px 154px 0;
+  }
+  
+  .clients .client {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-column-gap: 24px;
+            column-gap: 24px;
+  }
+  
+  @media (min-width: 992px) {
+    .clients .client {
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .clients .client {
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+    }
+  }
+  
+  .clients .client-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  
+  .clients .client-heading {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    letter-spacing: -0.015em;
+    line-height: 200%;
+    color: #2f65c2;
+    margin-bottom: 10px;
+  }
+  
+  .clients .client-subheading {
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 150%;
+    text-align: center;
+    margin: 0 auto;
+    font-family: "Montserrat", sans-serif;
+    color: #081843;
+    margin-bottom: 60px;
+  }
+  
+  /* Footer */
+  .contact {
+    background-color: #f6fafe;
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
+  
+  .contact-heading {
+    color: #2f65c2;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 200%;
+    letter-spacing: -0.015em;
+    margin-bottom: 15px;
+  }
+  
+  @media (max-width: 768px) {
+    .contact-heading {
+      text-align: center;
+    }
+  }
+  
+  .contact address ul li {
+    font-family: "Montserrat", sans-serif;
+    line-height: 156%;
+    letter-spacing: -0.015em;
+    color: #464646;
+    font-style: none;
+    text-decoration: none;
+  }
+  
+  .contact address ul li a {
+    text-decoration: none;
+    color: #464646;
+  }
+  
+  .contact .social {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 0 15px;
+    justify-content: center;
+  }
+  
+  .contact .license {
+    font-family: "Montserrat", sans-serif;
+    line-height: 156%;
+    letter-spacing: -0.015em;
+    color: #464646;
+  }
+  
+  /* recent news */
+  
+  .recents {
+    background-color: #2f65c2;
+    padding-bottom: 36px;
+  }
+  
+  .recents .recent-heading {
+    font-size: 36px;
+    line-height: 200%;
+    text-align: center;
+    letter-spacing: -0.015em;
+    color: #ffffff;
+    font-weight: 700;
+    padding-top: 86px;
+    margin-bottom: 50px;
+  }
+  
+  .recents .btn-viewall {
+    font-family: "Montserrat", sans-serif;
     font-size: 16px;
     font-weight: 600;
-    text-decoration: none;
     line-height: 150%;
-    color: #2e57b7;
-    background-color: #ffffff;
-    border-radius: 3px;
-    padding: 13px 43px;
-    margin-bottom: 35px;
-    transition: 0.3s;
-
-}
-  
-.btn:hover {
+    text-decoration: none;
+    display: inline-block;
+    background-color: #2f65c2;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
     color: #ffffff;
-    background-color: #2e57b7;
-}
-
-@media only screen and (max-width:700px)
-{
-    nav ul {
-        width: 100%;
-        background: #fff;
-        position: absolute;
-
+    position: relative;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    margin-top: 50px;
+    padding: 13px 43px;
+    -webkit-transition: 0.5 ease-in;
+    transition: 0.5 ease-in;
+  }
+  
+  .recents .btn-viewall:hover {
+    color: #2f65c2;
+    background-color: #ffffff;
+  }
+  
+  .recents .btn-viewall:focus {
+    outline: none !important;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  
+  .recent-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 24px 24px;
+    width: 100%;
+  }
+  
+  .recent-card-item {
+    background-color: #ffffff;
+    -webkit-box-shadow: 0px 5px 25px 0px #00000026;
+            box-shadow: 0px 5px 25px 0px #00000026;
+    width: calc(100% / 3 - 24px);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  
+  @media (max-width: 992px) {
+    .recent-card-item {
+      width: calc(100% / 2 - 24px);
+      margin-left: 12px;
     }
-    .menu{
-        align-items: center;
+  }
+  
+  @media (max-width: 768px) {
+    .recent-card-item {
+      width: calc(100% / 1 - 24px);
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      margin-left: 12px;
     }
-    .menu__item{
-        display :block;
-        margin-top: 10px;
-        margin-bottom: 10px; 
-    }
-    .menu__item--link{
-        color: #2e57b7;
-    }
-    .header__logo{
-        display: flex;
-        justify-content: center;
-        
-    }
-    .header__menu--icon{
-        display: block;
-    }
-    
-    .menu__language {
-        margin-right: 37px;
-        margin-top: 15px;
-        margin-bottom: 35px;
-      }
-      
-    .menu__language--line {
-        display: none;
-    }
-      
-    .menu__language--link {
-        color: #081843;
-        text-decoration: none;
-        display: none;
-        
-    }
-    #menuList{
-        display: none;
-        overflow: hidden;
-        transition: 0.5s;
-    }
-    .banner {
-        background-image: url(../img/BannerMB.png);
-        width: 100%;
-        height: 100%;    
-    }
-
-    .banner__content{
-        max-width: 100%;
-        height: 50%%;
-        background-color: rgba(47, 101, 194, 0.7);
-        top: 20%%;
-        bottom: 20%;
-        left: 0%;
-    }
-
-    .banner__content--heading {
-        color: #ffffff;
-        font-weight: 700;
-        font-size: 36px;
-        text-align: center;
-        line-height: 48px;
-    }
-      
-    .banner__content--text {
-        color: #ffffff;
-        font-size: 16px;
-        text-align: center;
-        line-height: 150%;
-        font-weight: 400;
-        margin-bottom: 46px;
-    }
-    .btn {
-        font-family: "Roboto", sans-serif;
-        font-size: 16px;
-        font-weight: 600;
-        text-decoration: none;
-        line-height: 150%;
-        color: #2e57b7;
-        background-color: #ffffff;
-        width: 170px;
-        border-radius: 3px;
-        transition: 0.3s;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    
-    }
-}
+  }
+  
+  .recent-card-item-img {
+    width: 100%;
+    height: 240px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+  
+  .recent-card-item .container-card {
+    margin: 16px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  
+  .recent-card-item .container-card .recent-card-calendar img {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  .recent-card-item .container-card .recent-card-calendar {
+    margin-bottom: 6px;
+  }
+  
+  .recent-card-item .container-card .date {
+    color: #081843;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    line-height: 150%;
+  }
+  
+  .recent-card-item .container-card .recent-card-text {
+    margin-top: auto;
+  }
+  
+  .recent-card-item .container-card .recent-card-heading {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 148%;
+    letter-spacing: -0.015em;
+    color: #2f65c2;
+    margin-bottom: 18px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-all;
+  }
